--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,44 +1,24 @@
 /* Tic Tac Toe Styles */
-body {
-  font: 14px "Century Gothic", Futura, sans-serif;
-  margin: 20px; }
-
-ol, ul {
-  padding-left: 30px; }
-
-.board-row:after {
-  clear: both;
-  content: "";
-  display: table; }
-
-.status {
-  margin-bottom: 10px; }
-
-.square {
-  background: #fff;
-  border: 1px solid #999;
-  float: left;
-  font-size: 24px;
-  font-weight: bold;
-  line-height: 34px;
-  height: 34px;
-  margin-right: -1px;
-  margin-top: -1px;
-  padding: 0;
-  text-align: center;
-  width: 34px; }
-
-.square:focus {
-  outline: none; }
-
-.kbd-navigation .square:focus {
-  background: #ddd; }
-
-.game {
-  display: flex;
-  flex-direction: row; }
-
-.game-info {
-  margin-left: 20px; }
-
 /* End Tic Tac Toe Styles */
+/* Memory Game */
+.board {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around; }
+  .board .memory-square {
+    width: 100px;
+    height: 100px;
+    background: rgba(0, 100, 100, 0.4);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    border-radius: 5px;
+    transition: .3s all;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0); }
+    .board .memory-square:hover {
+      cursor: pointer;
+      transition: .3s all;
+      box-shadow: 0px 0px 5px #4785ed; }
+
+/* End Memory Game */
